# hyperchain

./: .gitignore  MANIFEST.in  README.md  requirements.txt  setup.cfg  tox.ini
.github/: CODEOWNERS
.github/workflows/: test.yml
examples/: example_chain.py  example_chat_chain.py  example_cross_platform.py  example_function_map.py  example_masked_code.py  example_run_multiple.py  example_simple.py
src/hyperchain/: llm_chain.py  prompt_templates.py
src/hyperchain/chain/: __init__.py  chain.py  chain_result.py  chain_sequence.py  function_chain.py  function_map_chain.py  llm_chain.py
src/hyperchain/llm_model_runners/: __init__.py  error_handler.py  hf_runner.py  llm_result.py  llm_runner.py  masked_model_runner.py  openai_runner.py  prompt_response_length_predictor.py  t5_model_runner.py
src/hyperchain/llm_model_runners/response_length_prediction/: automatas.py  prediction.py  svr_data.py  task_extraction.py  task_parsing.py
src/hyperchain/llm_runners/: __init__.py  hf_runner.py  llm_result.py  llm_runner.py  masked_model_runner.py  openai_runner.py  t5_model_runner.py  utils.py
src/hyperchain/prompt_templates/: __init__.py  base_template.py  chat_template.py  mask_to_sentinel_template.py  string_template.py
tests/chain/: test_chain_result.py  test_function_chain.py  test_function_map_chain.py
tests/llm_runners/: test_hf_runner.py  test_masked_model.py  test_t5_model_runner.py  test_utils.py
tests/prompt_templates/: test_chat_template.py  test_mask_to_sentinel_template.py  test_string_template.py
(+3 files in other folders)
