[metadata]
name = hyperchain
version = 0.1.0
description = A high-performance LLM chaining framework for python
long_description = file: README.md
author = Damian Ziaber

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   openai
   tiktoken
   scipy
   numpy
   transformers

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio

[options.packages.find]
where=src