[metadata]
name = hyperchain
version = 0.1.2
description = A high-performance LLM chaining framework for python
long_description = file: README.md
long_description_content_type = text/markdown
author = Damian Ziaber

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   openai>=1.0.0
   tiktoken
   scipy
   numpy
   transformers

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-asyncio

[options.packages.find]
where=src
